fix chevron vertical alignment

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -131,7 +131,7 @@ body{
     margin-left: 40px;
     vertical-align: middle;
     .fa{
-      padding-top: 18px;
+      margin-top: 10px;
       padding-right: 20px;
       color: #666;
     }
@@ -201,7 +201,7 @@ body{
     margin-left: 40px;
     vertical-align: middle;
     .fa{
-      padding-top: 18px;
+      margin-top: 10px;
       padding-right: 20px;
       color: #666;
     }
